# neuro-rave

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  get_spotify_refresh_token.py  main.py  main_with_signal.py  package-lock.json  requirements.txt
.claude/: settings.json
config/: constants.json  dashboard_spotify_playback_mode.json  spotify_mood_mapping.json
dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.jsx  App.tsx  apiBase.ts  constants.ts  index.css
dashboard/src/components/: EEGChart.tsx
dashboard/src/hooks/: useEEGStream.ts
dashboard/src/pages/: LiveDashboard.tsx  SetupPage.tsx
dashboard/src/processing/: fifo.ts  packets.ts
docs/: dev-reference.md
native/: CMakeLists.txt  Dockerfile  main.cpp
native/include/: config.h  ws_server.h
native/include/audio/: audio_writer.h
native/include/processing/: block_processor.h  channel_array.h  fft.h  fifo.h  filter.h  overlap_add.h  ring_storage.h  signal_gen.h
native/include/streaming/: lsl_bridge.h  lsl_bridge_c.h  ws_server_c.h
native/src/: config.c  ws_server.cpp  ws_server_c.c
native/src/audio/: audio_writer.cpp
native/src/processing/: fft.cpp  fifo.cpp  filter.cpp  signal_gen.cpp
native/src/streaming/: lsl_bridge.cpp  lsl_bridge_c.c  ws_server.cpp
scripts/: setup_conda_env.sh
src/: constants.py
src/api/: spotify_routes.py
src/dashboard/: test_plot.py
src/music-gen/: __init__.py  spotify_controller.py  spotify_mapping_store.py  suno_client.py
src/music_gen/: bootstrap_spotify_playback.py  dashboard_playback_mode.py  dashboard_playback_pause.py  spotify_controller.py  spotify_mapping_store.py  spotify_playback_factory.py  spotify_pool_controller.py  spotify_refresh_token.py  track_pool.py
src/processing/: buffers.py  event_detection.py  fifo.py  focus_map.py  realtime_preprocess.py  spotify_feature_pipeline.py  test_dsp.py
src/streaming/: config.py  lslbridge.py  packets.py  tcp_test.py  ws_server.py
streaming/: lslbridge.py
